Crash in [@ nsAbLDIFService::AddLdifRowToDatabase]
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird78 fixed)
Tracking | Status | |
---|---|---|
thunderbird78 | --- | fixed |
People
(Reporter: wsmwk, Assigned: mkmelin)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
1.20 KB,
patch
|
benc
:
review+
wsmwk
:
approval-comm-beta+
|
Details | Diff | Splinter Review |
This bug is for crash report bp-39854da4-4463-4b19-a2e8-5cabf0200618.
Top 10 frames of crashing thread:
0 xul.dll nsAbLDIFService::AddLdifRowToDatabase comm/mailnews/addrbook/src/nsAbLDIFService.cpp:386
1 xul.dll nsAbLDIFService::ImportLDIFFile comm/mailnews/addrbook/src/nsAbLDIFService.cpp:130
2 xul.dll ImportAddressImpl::ImportAddressBook comm/mailnews/import/text/src/nsTextImport.cpp:408
3 xul.dll nsImportGenericAddressBooks::BeginImport comm/mailnews/import/src/nsImportAddressBooks.cpp:437
4 xul.dll XPTC__InvokebyIndex
5 @0x22563e99a3f
6 xul.dll truncf
7 xul.dll truncf
8 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1140
9 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:946
Assignee | ||
Comment 1•5 years ago
|
||
Looks like outlist was null
Comment 2•5 years ago
|
||
Assignee | ||
Comment 3•5 years ago
|
||
Yeah ideally this wouldn't be a void method... many of the error cases are unlikely though, so it's unclear if you're already not in bigger problems.
Comment 4•5 years ago
|
||
(In reply to Magnus Melin [:mkmelin] from comment #3)
Yeah ideally this wouldn't be a void method... many of the error cases are unlikely though, so it's unclear if you're already not in bigger problems.
That's what I figured. One to punt onward for the next time someone's wading about in this code :-)
Pushed by thunderbird@calypsoblue.org:
https://hg.mozilla.org/comm-central/rev/9a572242446d
fix Crash in [@ nsAbLDIFService::AddLdifRowToDatabase]. r=benc
Comment 6•5 years ago
|
||
Reporter | ||
Comment 7•5 years ago
|
||
Updated•5 years ago
|
Comment 8•5 years ago
|
||
bugherder uplift |
Thunderbird 78.0b3:
https://hg.mozilla.org/releases/comm-beta/rev/f001e566656e
Description
•