Bug 1646837 - fix Crash in [@ nsAbLDIFService::AddLdifRowToDatabase]. r=benc